--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel"stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    
 
 </head>
 
+
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Header Logo</div>
+            <ul class="nav">
+                <li>
+                    <a href="">Header Link One</a>
+                </li>
+                <li>
+                    <a href="">Header Link Two</a>
+                </li>
+                <li>
+                    <a href="">Header Link Three</a>
+                </li> 
+            </ul>
+        </div>
+    </nav>
+
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>This website is awesome</h1>
+                <p>T
+                    his website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
+                </p>
+            </div>
+
+
+
+        </div>
+    </header>
     
 </body>
 
