--- a/index.html
+++ b/index.html
@@ -33,15 +33,38 @@
         <div class="container">
             <div>
                 <h1>This website is awesome</h1>
-                <p>T
-                    his website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
+                <p>
+                    This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
                 </p>
+                <button class="sign">Sign Up</button>
             </div>
-
-
+            <img src="./images/pexels-nati-14768797.jpg" alt="">
 
         </div>
     </header>
+
+    <div class="boxes">
+        <div class="container">
+            <h2>Some random information</h2>
+            <div class="box">
+                <img src="./images/image_1.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="box">
+                <img src="./images/image_2.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="box">
+                <img src="./images/image_3.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="box">
+                <img src="./images/image_4.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+
+            </div>
+        </div>
+    </div>
     
 </body>
 
