--- a/index.html
+++ b/index.html
@@ -109,11 +109,14 @@
 
     <div class="action">
         <div class="container">
+            <div class="sign-up">
             <h3>Call to action! It's Time!</h3>
-            <p>
+            
                 Sign up for our product by clicking that button right over there!
-            </p>
+            </div>
+            <div class="cta">
             <button class="sign">Sign Up</button>
+            </div>
         </div>
 
     </div>
